# pauli-propagation

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: index.doctree  install.doctree
docs/_build/html/.doctrees/apidocs/: index.doctree  pauli_propagation.propagation.doctree
docs/_build/html/.doctrees/how_tos/: do_something.doctree  index.doctree
docs/_build/html/.doctrees/tutorials/: do_something.doctree  index.doctree
docs/_build/html/apidocs/: index.html  pauli_propagation.propagation.html
docs/_build/html/how_tos/: do_something.html  index.html
docs/_build/html/stubs/: pauli_propagation.propagation.RotationGates.html  pauli_propagation.propagation.circuit_to_rotation_gates.html  pauli_propagation.propagation.evolve_through_cliffords.html  pauli_propagation.propagation.propagate_through_circuit.html  pauli_propagation.propagation.propagate_through_operator.html  pauli_propagation.propagation.propagate_through_rotation_gates.html
docs/_build/html/tutorials/: do_something.html  index.html
docs/apidocs/: index.rst  pauli_propagation.propagation.rst
pauli_propagation/: __init__.py  propagation.py
src/: lib.rs
test/: test_propagation.py
